feat: add unit tests with vitest
- Add vitest configuration with jsdom
- Add meal plan tests (9 tests)
- Add workout plan tests (9 tests)
- Configure GitHub Actions for Pages deploy

--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "jcv-fitness",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "vitest",
+    "test:run": "vitest run"
   },
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
@@ -23,16 +26,17 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@types/node": "^20",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19",
-    "@vitejs/plugin-react": "^5.1.2",
+    "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
-    "jsdom": "^27.4.0",
+    "jsdom": "^24.1.0",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "vitest": "^4.0.18"
+    "vitest": "^1.6.0"
   }
 }
