--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -32,6 +32,9 @@ jobs:
 
       - name: Build
         run: npm run build
+        env:
+          NEXT_PUBLIC_MP_PUBLIC_KEY: ${{ secrets.NEXT_PUBLIC_MP_PUBLIC_KEY }}
+          NEXT_PUBLIC_MP_WORKER_URL: ${{ secrets.NEXT_PUBLIC_MP_WORKER_URL }}
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
