feat(wizard,payment): improve equipment UX and add sandbox/prod workflows
- Equipment UX improvements:
  - Casa Equipado no longer includes sin_equipo
  - sin_equipo is mutually exclusive with other equipment
  - Quick options use exact match for highlight state
  - Selecting any equipment auto-removes sin_equipo

- MercadoPago sandbox/prod control:
  - CheckoutModal uses NEXT_PUBLIC_MP_SANDBOX env var
  - Production workflow (static.yml) uses sandbox=false
  - New staging workflow generates downloadable sandbox build

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,6 +36,7 @@ jobs:
         env:
           NEXT_PUBLIC_MP_PUBLIC_KEY: ${{ secrets.NEXT_PUBLIC_MP_PUBLIC_KEY }}
           NEXT_PUBLIC_MP_WORKER_URL: ${{ secrets.NEXT_PUBLIC_MP_WORKER_URL }}
+          NEXT_PUBLIC_MP_SANDBOX: "false"
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
