--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "staging"]
   workflow_dispatch:
 
 permissions:
@@ -17,7 +17,7 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment: Production
+    environment: ${{ github.ref_name == 'main' && 'Production' || 'Staging' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -36,7 +36,7 @@ jobs:
         env:
           NEXT_PUBLIC_MP_PUBLIC_KEY: ${{ secrets.NEXT_PUBLIC_MP_PUBLIC_KEY }}
           NEXT_PUBLIC_MP_WORKER_URL: ${{ secrets.NEXT_PUBLIC_MP_WORKER_URL }}
-          NEXT_PUBLIC_MP_SANDBOX: "false"
+          NEXT_PUBLIC_MP_SANDBOX: ${{ github.ref_name == 'main' && 'false' || 'true' }}
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
